@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.21 ===
+* Fixed improper units for the output delay value.
 * Updated build scripts and dependencies.
 
 === 1.0.20 ===
